drumkv1 - an old-school drum-kit sampler
----------------------------------------

ChangeLog


0.9.5  2019-03-04  The End of Winter'19 release.

- Improved overall stability for current sample offset range
  property changes across UI's, eg. LV2 plug-in native GUI
  and a host generic provided one.
- HiDPI display screen support (Qt >= 5.6).
- A fake/visual piano-keyboard widget is now being introduced
  to the status bar.
- Avoid destructing the possibly shared QApplication instance
  on LV2 plug-in UI clean-up.


0.9.4  2018-12-12  A Late Autumn'18 release.

- Make sure all LV2 state sample file references are resolved
  to their original and canonical file-paths (not symlinks).
- Sample waveform drawing is a bit more keen to precision.
- Old deprecated Qt4 build support is no more.
- Normalized wavetable oscillator phasors.
- Added missing include <unistd.h> to shut up some stricter
  compilers from build failures.


0.9.3  2018-10-22  An Autumn'18 release.

- For safety reasons, all processing is now suspended while
  loading presets or program changes are issued.
- AppStream metadata updated to be the most compliant with
  latest freedesktop.org specification and recommendation.
- SIGTERM (and SIGINT) signal handler added to close the JACK
  stand-alone client applications properly.
- Make the GUI not to show initially on NSM.
- Current element sample offset start/end parameters automation
  is now a possibility, on the LV2 plug-in only.
- Make NSM state independent to session display name, keeping
  backward compatibility for old sessions.
- Give some more slack to schedule/worker thread ring-buffer.


0.9.2  2018-07-24  A Summer'18 release.

- Frame-time display format option added to the new offset
  spin-box.
- Sample start point (offset) added as a brand new property
  parameter.
- Add LV2 UI Resize extension data support.
- Process MIDI Controlllers even though the channel filter
  is on (DEF Channel is set anything but "Omni").