@@ -4,6 +4,11 @@ drumkv1 - an old-school drum-kit sampler
 ChangeLog
 
 
+GIT HEAD
+
+- Brute force shutdown on the JACK client standalone front...
+  (EXPERIMENTAL)
+
 0.9.5  2019-03-04  The End of Winter'19 release.
 
 - Improved overall stability for current sample offset range
